[add]gitのコメントでemacsclientを利用する設定を追加
gitのcommit時のコメントの入力のため、通常のEmacsを指定すると起動が遅いため、emacsclientを指定して起動する。

--- a/.gitconfig
+++ b/.gitconfig
@@ -5,4 +5,4 @@
   email = takaheroes@gmail.com
 
 [core]
-  editor = "/Applications/Emacs.app/Contents/MacOS/Emacs"
+  editor = "/Applications/Emacs.app/Contents/MacOS/bin/emacsclient" --alternate-editor "/Applications/Emacs.app/Contents/MacOS/Emacs"
