[update]ddskkディレクトリ配下のファイルをリストに追加
設定ファイルは管理対象とするが設定ファイル以外のファイルは管理対象外とするよう設定を変更

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
-# Emacsд╬~е╒ебедеы
+# EmacsуБо~уГХуВбуВдуГл
 *.*~
 
+# DDSKKуБошинхоЪуГХуВбуВдуГл
+.emacs.d/config/ddskk/
+!.emacs.d/config/ddskk/init
