--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,3 +1,38 @@
 # マウス操作を有効にする
 set-option -g mouse on
 
+# prefixキーを設定する
+set -g prefix C-x
+
+# デフォルトのprefixキーを解除する
+unbind C-b
+
+# 256色モードを有効にする
+set-option -g default-terminal screen-256color
+set -g terminal-overrides 'xterm:colors=256'
+
+# status lineの設定
+## status lineの色を設定する
+setw -g status-style fg=colour255,bg=colour17
+
+## window statusの設定
+### アクティブウィンドウの設定
+### ウィンドウのインデックスと名前を表示する
+### ウィンドウの色とprefixを押した際の色を設定する
+setw -g window-status-current-format '#[bg=colour2,fg=colour255]#{?client_prefix,#[bg=colour3],} #I #W '
+
+### 非アクティブウィンドウの設定
+### ウィンドウのインデックスと名前を表示する
+### ウィンドウの色を設定する
+setw -g window-status-format '#[fg=colour242] #I #W '
+
+## status leftの設定
+## セッション名を表示する
+set-option -g status-left "#S"
+
+## status rightの設定
+## ローカルホストのドメイン名を除いたホスト名と現在日時、現在時刻を表示する
+set-option -g status-right "#h %Y/%m/%d %H:%M"
+
+# <prefix>+rで設定ファイルをリロードする
+bind-key -T prefix r source-file ~/.tmux.conf \; display-message 'Reload was successful.'
